fix nav display on tablet when isOpen

--- a/src/ui/navigation/navigation.module.scss
+++ b/src/ui/navigation/navigation.module.scss
@@ -27,6 +27,7 @@
             @include tablet{
                 display: flex;
                 height: fit-content;
+                background-color: inherit;
             }
         }
     }
